// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customCellRenderer should match snapshot with CustomComponent 1`] = `
<td
  attributesRenderer={[MockFunction]}
  className="cell  "
  col={10}
  editing={false}
  onContextMenu={[MockFunction]}
  onDoubleClick={[Function]}
  onMouseDown={[MockFunction]}
  onMouseOver={[MockFunction]}
  row={3}
  selected={false}
  style={
    Object {
      "background": "red",
    }
  }
  updated={false}
  value="row3@gmail.com"
>
  <CustomComponent
    cellRenderProps={
      Object {
        "attributesRenderer": [MockFunction],
        "cell": Object {
          "CustomComponent": [Function],
          "value": "row3@gmail.com",
        },
        "children": <div>
          hi
        </div>,
        "className": "cell",
        "col": 10,
        "editing": false,
        "onContextMenu": [MockFunction],
        "onDoubleClick": [MockFunction],
        "onMouseDown": [MockFunction],
        "onMouseOver": [MockFunction],
        "row": 3,
        "selected": false,
        "style": Object {
          "background": "red",
        },
        "updated": false,
      }
    }
    data={
      Array [
        Array [
          Object {
            "value": "Office name",
          },
          Object {
            "value": "Building Name",
          },
          Object {
            "value": "Building No.",
          },
          Object {
            "value": "Address 1",
          },
          Object {
            "value": "Address 2",
          },
          Object {
            "value": "Address 3",
          },
          Object {
            "value": "Address 4",
          },
          Object {
            "value": "Post Code",
          },
          Object {
            "value": "Telephone",
          },
          Object {
            "value": "Fax",
          },
          Object {
            "value": "Email",
          },
        ],
        Array [
          Object {
            "value": "London",
          },
          Object {
            "value": "The White House",
          },
          Object {
            "value": "15",
          },
          Object {
            "value": "London 1",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "Londom 3",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "EC12NH",
          },
          Object {
            "value": "0845 0000",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "row1@gmail.com",
          },
        ],
        Array [
          Object {
            "value": "London2",
          },
          Object {
            "value": "The Black House",
          },
          Object {
            "value": "11",
          },
          Object {
            "value": "Test Addres",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "Adress 3",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "EC12NH",
          },
          Object {
            "value": "087 471 929",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "row2@gmail.com",
          },
        ],
        Array [
          Object {
            "value": "New York",
          },
          Object {
            "value": "Building A",
          },
          Object {
            "value": "11",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "City Z",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "AL7187",
          },
          Object {
            "value": "017 7162 9121",
          },
          Object {
            "value": "",
          },
          Object {
            "value": "row3@gmail.com",
          },
        ],
      ]
    }
    setData={[MockFunction]}
    setSelected={[MockFunction]}
  />
</td>
`;

exports[`customCellRenderer should match snapshot with invalid cell 1`] = `
<td
  attributesRenderer={[MockFunction]}
  className="cell error-cell "
  col={10}
  editing={false}
  onContextMenu={[MockFunction]}
  onDoubleClick={[Function]}
  onMouseDown={[MockFunction]}
  onMouseOver={[MockFunction]}
  row={3}
  selected={false}
  style={
    Object {
      "background": "red",
    }
  }
  updated={false}
  value="11aa"
>
  <div>
    hi
  </div>
</td>
`;

exports[`customCellRenderer should match snapshot without CustomComponent 1`] = `
<td
  attributesRenderer={[MockFunction]}
  className="cell  "
  col={10}
  editing={false}
  onContextMenu={[MockFunction]}
  onDoubleClick={[Function]}
  onMouseDown={[MockFunction]}
  onMouseOver={[MockFunction]}
  row={3}
  selected={false}
  style={
    Object {
      "background": "red",
    }
  }
  updated={false}
  value="row3@gmail.com"
>
  <div>
    hi
  </div>
</td>
`;
